--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,17 @@ body {
   @apply bg-gray-100 text-slate-700 min-h-screen;
 }
 
+::-webkit-scrollbar {
+  @apply w-2;
+}
+::-webkit-scrollbar-thumb {
+  @apply bg-gray-500 rounded-md;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-gray-700;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
